--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -1,5 +1,26 @@
 <%- contentFor('body') %>
 <div class="conteudo">
-    <input type="text" placeholder="Buscar" />
-    <!-- <i class="fas fa-search"></i> -->
+    <form onsubmit="">
+        <input type="text" placeholder="Buscar" />
+        <!-- <i class="fas fa-search"></i> -->
+    </form>
+</div>
+
+<div class="linha">
+    <h1>Previsão para Osasco - SP</h1>
+</div>
+
+<div class="linha">
+    <div class="col-6">
+        <div class="card">
+            <h5>Dia 01/01/2020</h5>
+            <p>Sol com muitas nuvens durante o dia. Probabilidade de chuvas fortes no final da tarde.</p>
+        </div>
+    </div>
+
+    <div class="col-6">
+        <div class="card">
+            <h5>Dia 02/01/2020</h5>
+        </div>
+    </div>
 </div>
