--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 body{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;    
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+    /* background-color: #ced4da;    */
 }
 
 header{
@@ -24,5 +25,41 @@ header h1 {
     background-color: #fff;
     background-clip: padding-box;
     border: 1px solid #ced4da;
-    border-radius: 0.25rem;    
+    border-radius: 0.25rem;
+    margin-bottom: 20px;    
+}
+
+.linha{
+    display: flex;    
+    flex-flow: row wrap;
+    padding: 0 0 0 5%;        
+}
+
+.col-6{
+    margin: 8px;
+    width: 45%;    
+}
+
+@media(max-width: 800px){
+    .col-6{        
+        width: 100%;    
+    }
+}
+
+.card {
+    position: relative;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    min-width: 0;
+    word-wrap: break-word;
+    background-color: #fff;
+    background-clip: border-box;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+    border-radius: 0.25rem;
+}
+
+.card h5{
+    text-align: center;
 }
