--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
-    /* background-color: #ced4da;    */
+    background-color: #E0E0E0;   
 }
 
 header{
