adicionando conteudo da previsao

--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -15,6 +15,12 @@
         <div class="card">
             <h5>Dia 01/01/2020</h5>
             <p>Sol com muitas nuvens durante o dia. Probabilidade de chuvas fortes no final da tarde.</p>
+            <div class="dados">
+                <img src="/img/maxima.png" title="maxima" alt="Maxima" />
+                <span class="maxima">20° C</span>  
+                <img src="/img/minima.png" title="minima" alt="Minima" />
+                <span class="minima">10° C</span>              
+            </div>
         </div>
     </div>
 
