--- a/public/css/style.css
+++ b/public/css/style.css
@@ -16,8 +16,8 @@ header h1 {
 }
 
 .conteudo input{  
-    width: 100%;       
-    padding: 0.375rem 0;
+    width: 99%;       
+    padding: .375rem 0 .375rem 1%;
     font-size: 1rem;
     font-family: inherit;
     line-height: 1.5;
@@ -62,4 +62,32 @@ header h1 {
 
 .card h5{
     text-align: center;
+}
+
+.card p{
+    margin-left: 15px;
+}
+
+.card div.dados{
+    display: flex;
+    align-items: center;
+}
+
+.card div.dados img{
+    width: 5%;
+    margin: auto;
+    opacity: 0.2;  
+}
+
+.card div.dados span{
+    margin-right: 15%;
+}
+
+.maxima { 
+    color: #68AACC; 
+    font-weight: bold;
+}
+.minima { 
+    color: #A53A3B; 
+    font-weight: bold;
 }
