--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -7,13 +7,13 @@
 </div>
 
 <div class="linha">
-    <h1>Previsão para Osasco - SP</h1>
+    <h2>Previsão para Osasco - SP</h2>
 </div>
 
 <div class="linha">
     <div class="col-6">
         <div class="card">
-            <h5>Dia 01/01/2020</h5>
+            <h4>Dia 01/01/2020</h4>
             <p>Sol com muitas nuvens durante o dia. Probabilidade de chuvas fortes no final da tarde.</p>
             <div class="dados">
                 <img src="/img/maxima.png" title="maxima" alt="Maxima" />
@@ -21,12 +21,31 @@
                 <img src="/img/minima.png" title="minima" alt="Minima" />
                 <span class="minima">10° C</span>              
             </div>
+            <div class="dados2">
+                <img src="/img/umido.png" title="umido" alt="Umido" />
+                <span class="chuva">10MM</span>
+                <img src="/img/chuva.png" title="chuva" alt="Chuva" />
+                <span class="chuva">50%</span>
+            </div>
         </div>
     </div>
 
     <div class="col-6">
         <div class="card">
-            <h5>Dia 02/01/2020</h5>
+            <h4>Dia 02/01/2020</h4>
+            <p>Sol com muitas nuvens durante o dia. Probabilidade de chuvas fortes no final da tarde.</p>
+            <div class="dados">
+                <img src="/img/maxima.png" title="maxima" alt="Maxima" />
+                <span class="maxima">20° C</span>  
+                <img src="/img/minima.png" title="minima" alt="Minima" />
+                <span class="minima">10° C</span>              
+            </div>
+            <div class="dados2">
+                <img src="/img/umido.png" title="umido" alt="Umido" />
+                <span class="chuva">10MM</span>
+                <img src="/img/chuva.png" title="chuva" alt="Chuva" />
+                <span class="chuva">50%</span>
+            </div>
         </div>
     </div>
 </div>
