--- a/public/css/style.css
+++ b/public/css/style.css
@@ -60,8 +60,8 @@ header h1 {
     border-radius: 0.25rem;
 }
 
-.card h5{
-    text-align: center;
+.card h4{
+    text-align: center;    
 }
 
 .card p{
@@ -71,23 +71,46 @@ header h1 {
 .card div.dados{
     display: flex;
     align-items: center;
+    padding-top: 25px;
+    background-color: #EEE;
+}
+
+.card div.dados2{
+    display: flex;
+    align-items: center;
+    padding-bottom: 25px;
+    padding-top: 15px;
+    background-color: #EEE; 
 }
 
 .card div.dados img{
-    width: 5%;
+    width: 7%;
     margin: auto;
-    opacity: 0.2;  
+    opacity: 0.2; 
 }
 
-.card div.dados span{
+.card div.dados2 img{
+    width: 7%;
+    margin: auto;    
+}
+
+.card div.dados span, .card div.dados2 span{
     margin-right: 15%;
 }
 
 .maxima { 
     color: #68AACC; 
     font-weight: bold;
+    font-size: 20px;
 }
 .minima { 
     color: #A53A3B; 
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.chuva{
+    color: #000;
+    font-size: 20px;
     font-weight: bold;
 }
