--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,7 +26,20 @@ header h1 {
     background-clip: padding-box;
     border: 1px solid #ced4da;
     border-radius: 0.25rem;
-    margin-bottom: 20px;    
+    margin-bottom: 20px;        
+}
+
+.conteudo button{
+    border: 0;
+    background-color: transparent;
+    position: sticky;    
+    left: 95%;
+    bottom: 95%;
+    cursor: pointer;
+}
+
+.conteudo button img{
+    width: 30px;
 }
 
 .linha{
