--- a/views/pages/home.ejs
+++ b/views/pages/home.ejs
@@ -2,7 +2,7 @@
 <div class="conteudo">
     <form action="/" method="POST">
         <input type="text" name="buscar" placeholder="Buscar" />
-        <button type="submit"></button>
+        <button type="submit"><img src="/img/search.png" /></button>
     </form>
 </div>
 
